fixed post text & icon spacing

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -292,6 +292,7 @@ body {
             p {
                 padding-inline: 10px 30px;
                 margin: 5px;
+                min-height: 2.5em;
             }
     
             #trash,
